add exports jdk.internal.vm.annotation for sig test failure.
Signed-off-by: gurunrao <gurunandan.rao@oracle.com>